--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,15 +1,16 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "team.birdhead.licenseview.example"
         minSdkVersion 14
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0.0"
+        targetSdkVersion 30
+        versionCode 2
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -20,7 +21,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    implementation project(':library')
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 }
